manifests/base/microservices/orders-db/orders-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop
spec:
  serviceName: orders-db
  replicas: 1
  selector:
    matchLabels:
      name: orders-db

  template:
    metadata:
      labels:
        name: orders-db

    spec:
      securityContext:
        fsGroup: 999

      containers:
        - name: orders-db
          image: mongo:latest
          ports:
            - name: mongo
              containerPort: 27017

          securityContext:
            runAsUser: 999
            runAsGroup: 999
            capabilities:
              drop:
                - all
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: orders-db-data
              mountPath: /data/db
            - name: tmp-volume
              mountPath: /tmp

      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory

  volumeClaimTemplates:
    - metadata:
        name: orders-db-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
