manifests/base/microservices/orders-db/orders-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  labels:
    name: orders-db
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: orders-db
